# weather_xzxc

./: api.py  config.py  date_picker.py  db.py  demo.py  file_import.py  get_data.py  main.py  pyproject.toml  readme.md  receive.py
data/: data_to_db.py  names.txt  pand.py
data/data4/: 23074.csv  йцу
database/: weatherDB.db
func/: api.py  config.py  date_picker.py  file_import.py  get_data.py  predict.py  receive.py  unit_test.py
preparation/: formatted.json  json_demo.json  meteo.html  zxc.py
sklearn_models/: xg_regressor_hum.pkl  xg_regressor_per.pkl  xg_regressor_press.pkl  xg_regressor_temp.pkl  xg_regressor_wind.pkl
vid_pred/: 23074.csv  23074.xlsx
