[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^1.10.1"
psycopg2 = "^2.9.9"
pandas = "^2.1.4"
requests = "^2.31.0"
bs4 = "^0.0.1"
pyarrow = "^14.0.2"
openpyxl = "^3.1.2"
scikit-learn = "^1.4.0"
xgboost = "^2.0.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
